# screenlog-google

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  PRIVACY.md  README.md  SECURITY.md  analyzer.py  autostart.py  capture.py  config.py  docs_writer.py  dummy_capture.py  env_file.py  gmail_notifier.py  google_auth.py  logging_setup.py  main.py  pyproject.toml  redaction.py  report_reader.py  requirements-ocr.txt  requirements-openai.txt  requirements-tray.txt  requirements.txt  retention.py  retry.py  setup_sheet.py  setup_web.py  sheets_store.py  stubs.py  tray.py  weekly_report.py  window_tracker.py  wizard.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
tests/: conftest.py  test_aggregate.py  test_app_breakdown.py  test_autostart.py  test_build_record.py  test_core_loop.py  test_env_file.py  test_folder_browser.py  test_gemini_backend.py  test_logging_setup.py  test_openai_backend.py  test_parse_json.py  test_platform.py  test_redact.py  test_redaction.py  test_retention.py  test_retry.py  test_settings.py  test_setup_page_js.py  test_sheets_stub.py  test_weekly_report.py  test_window_tracker.py  test_wizard.py  test_wizard_actions.py
